finished up settings/dashboard pages. working on os/browser usage pages